[gd_scene load_steps=8 format=2]

[ext_resource path="res://CardFace.tscn" type="PackedScene" id=1]
[ext_resource path="res://GHBigFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://CardSelector.gd" type="Script" id=3]
[ext_resource path="res://GHBigFontInvert.tres" type="DynamicFont" id=4]
[ext_resource path="res://GHAttackInvert.tres" type="Theme" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="CardSelector" type="HBoxContainer"]
anchor_right = 1.0
margin_right = -20.0
margin_bottom = 195.0
rect_min_size = Vector2( 580, 0 )
size_flags_horizontal = 3
theme = ExtResource( 5 )
custom_constants/separation = 10
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardFace" parent="." instance=ExtResource( 1 )]
margin_right = 288.0
margin_bottom = 195.0
rect_min_size = Vector2( 288, 195 )
size_flags_horizontal = 5
size_flags_vertical = 4

[node name="DeleteLabel" type="Label" parent="CardFace"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Delete"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinusButton" type="Button" parent="."]
margin_left = 298.0
margin_top = 45.0
margin_right = 385.0
margin_bottom = 149.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
custom_styles/normal = SubResource( 1 )
text = "-"

[node name="CardCount" type="Label" parent="."]
margin_left = 395.0
margin_top = 45.0
margin_right = 482.0
margin_bottom = 149.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "0"
align = 1
valign = 1

[node name="PlusButton" type="Button" parent="."]
margin_left = 492.0
margin_top = 45.0
margin_right = 580.0
margin_bottom = 149.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
custom_styles/normal = SubResource( 2 )
text = "+"

[connection signal="pressed" from="MinusButton" to="." method="_on_MinusButton_pressed"]
[connection signal="pressed" from="PlusButton" to="." method="_on_PlusButton_pressed"]
